--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 locale                   : "en-US"
 title                    : "B"
 title_separator          : "-"
-#name                     : ""
+name                     : "https://twitter.com/Hojong13"
 description              : "blog for dev study."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
@@ -52,7 +52,7 @@ staticman:
   path                   : # "/_data/comments/{options.slug}" (default)
   requiredFields         : # ['name', 'email', 'message']
   transforms:
-    email                :  "hojong6636@gamil.com"
+    email                : # "md5"
   generatedFields:
     date:
       type               : # "date"
@@ -82,9 +82,9 @@ yandex_site_verification :
 naver_site_verification  :
 
 # Social Sharing
-twitter: "https://twitter.com/Hojong13"
+twitter:
   username               :
-facebook: 
+facebook:
   username               :
   app_id                 :
   publisher              :
