--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 locale                   : "en-US"
 title                    : "B"
 title_separator          : "-"
-#name                     : "https://twitter.com/Hojong13"
+name                     : ""
 description              : "blog for dev study."
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
@@ -106,11 +106,11 @@ analytics:
 
 # Site Author
 author:
-  name             : "B"
+  #name             : "B"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
  # bio              : "I am an amazing person."
+  email            : "hojong6636@mail.com"
   location         : "Seoul"
-  email            :
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
@@ -136,7 +136,7 @@ footer:
   links:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      #url:"https://twitter.com/Hojong13"
+      url: "https://twitter.com/Hojong13"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
       # url:
