--- a/_config.yml
+++ b/_config.yml
@@ -123,7 +123,7 @@ author:
       url: "https://twitter.com/Hojong13"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
-      # url: "https://facebook.com/"
+      url: "https://www.facebook.com/HojongY"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/oneybee/100days-of-react"
@@ -139,10 +139,10 @@ footer:
       url: "https://twitter.com/Hojong13"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
-      # url:
+      url: "https://www.facebook.com/HojongY"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url:
+      url: "https://github.com/oneybee/100days-of-react"
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
       # url:
@@ -151,7 +151,7 @@ footer:
       # url:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      # url:
+      url: "https://www.instagram.com/hj._you/"
 
 
 # Reading Files
